--- a/.github/workflows/twitter-to-json.yml
+++ b/.github/workflows/twitter-to-json.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Commit and push changes
         run: |
           git config user.name "GitHub Actions Bot"
-          git config user.email "<your-email>"
+          git config user.email "dragon@dragontheory.com"
           git add .
           git commit -m "Updated JSON with latest Twitter data" || echo "No changes to commit"
           git push
